added new admins changed and fixed bugs on dockerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,3 +31,4 @@ services:
       - TRENAJOR=${TRENAJOR}
       - SBORNIK=${SBORNIK}
       - MEDIC=${MEDIC}
+      - KONS_PARALLELOGRAM=${KONS_PARALLELOGRAM}
